--- a/code/index.html
+++ b/code/index.html
@@ -8,7 +8,193 @@
     <title>Adam Keyes</title>
   </head>
   <body>
-    <h1>adamkeyes</h1>
+    <header class="header">
+
+      <h1>adamkeyes</h1>
+
+      <div class="ovalos">
+        <img src="./img/ovalos.png" alt="decoration">
+      </div>
+
+      <div class="circle">
+        <img src="./img/semicirculo.png" alt="decoration2">
+      </div>
+
+      <div class="hero-photo">
+        <div class="icons">
+          <a href="#"><img src="./img/github.png" alt="github"></a>
+          <a href="#"><img src="./img/frontmentor.png" alt="front mentor"></a>
+          <a href="#"><img src="./img/linkedin.png" alt="linkedin"></a>
+          <a href="#"><img src="./img/twitter.png" alt="twitter"></a>
+        </div>
+
+        <div class="photo">
+          <img src="./img/persona.png" alt="Adam Keyes photo">
+        </div>
+      </div>
+
+      <div class="hero-text">
+        <h1>
+          Nice to meet you! I’m <span>Adam Keyes</span>.
+        </h1>
+
+        <p>
+          Based in the UK, I’m a front-end developer passionate about building
+          accessible web apps that users love.
+        </p>
+
+        <a href="#contact">CONTACT ME</a>
+      </div>
+    </header>
+
+    <hr>
+
+    <main>
+      <section class="curriculum">
+        <h1>HTML</h1>
+        <p>4 Years Experience</p>
+
+        <h1>CSS</h1>
+        <p>4 Years Experience</p>
+
+        <h1>Javascript</h1>
+        <p>4 Years Experience</p>
+
+        <h1>Accesibility</h1>
+        <p>4 Years Experience</p>
+
+        <h1>React</h1>
+        <p>3 Years Experience</p>
+
+        <h1>Sass</h1>
+        <p>3 Years Experience</p>
+      </section>
+
+      <hr>
+
+      <section class="projects">
+        <div class="header-projects">
+          <h1>Projects</h1>
+          <a href="#contact">Contact Me</a>
+        </div>
+
+        <div class="project1">
+          <div class="img1">
+            <img src="./img/image1.png" alt="Project 1">
+          </div>
+
+          <h1>DESIGN PORTFOLIO</h1>
+          <H2 class="space">HTML    CSS</H2>
+          <p>
+            <a href="#">VIEW PROJECT</a>
+            <a href="#">VIEW CODE</a>
+          </p>
+        </div>
+
+        <div class="project2">
+          <div class="img2">
+            <img src="./img/image2.png" alt="Project 2">
+          </div>
+
+          <h1>E-LEARNING LANDING PAGE</h1>
+          <H2 class="space">HTML    CSS</H2>
+          <p>
+            <a href="#">VIEW PROJECT</a>
+            <a href="#">VIEW CODE</a>
+          </p>
+        </div>
+
+        <div class="project3">
+          <div class="img3">
+            <img src="./img/image3.png" alt="Project 3">
+          </div>
+
+          <h1>TODO WEB APP</h1>
+          <H2 class="space">HTML    CSS    JAVASCRIPT</H2>
+          <p>
+            <a href="#">VIEW PROJECT</a>
+            <a href="#">VIEW CODE</a>
+          </p>
+        </div>
+
+        <div class="project4">
+          <div class="img4">
+            <img src="./img/image4.png" alt="Project 4">
+          </div>
+
+          <h1>ENTERNAIMENT WEB APP</h1>
+          <H2 class="space">HTML    CSS    JAVASCRIPT</H2>
+          <p>
+            <a href="#">VIEW PROJECT</a>
+            <a href="#">VIEW CODE</a>
+          </p>
+        </div>
+
+        <div class="project5">
+          <div class="img5">
+            <img src="./img/image5.png" alt="Project 5">
+          </div>
+
+          <h1>MEMORY GAME</h1>
+          <H2 class="space">HTML    CSS    JAVASCRIPT</H2>
+          <p>
+            <a href="#">VIEW PROJECT</a>
+            <a href="#">VIEW CODE</a>
+          </p>
+        </div>
+
+        <div class="project6">
+          <div class="img6">
+            <img src="./img/image6.png" alt="Project 6">
+          </div>
+
+          <h1>ART GALLERY SHOWCASE</h1>
+          <H2 class="space">HTML    CSS    JAVASCRIPT</H2>
+          <p>
+            <a href="#">VIEW PROJECT</a>
+            <a href="#">VIEW CODE</a>
+          </p>
+        </div>
+      </section>
+
+      <section id="contact">
+        <h1>Contact</h1>
+        <p>
+          I would love to hear about your project and how I could help.
+          Please fill in the form, and I’ll get back to you as soon as possible.
+        </p>
+        <div class="cuestionario">
+          <form action="#" method="post" class="contact-form">
+            <div class="input">
+              <input type="text" placeholder="NAME" id="name" required>
+            </div>
+
+            <div class="input">
+              <input type="email" placeholder="EMAIL" id="email" required>
+            </div>
+
+            <div class="input">
+              <textarea name="user_message" id="message" cols="60" rows="5" placeholder="MESSAGE"></textarea>
+            </div>
+
+            <button type="submit" class="send-button">
+              SEND MESSAGE
+            </button>
+          </form>
+        </div>
+      </section>
+      <hr>
+    </main>
+
+    <footer>
+      <h1>adamkeyes</h1>
+      <div class="icons">
+        <a href="#"><img src="./img/github.png" alt="github"></a>
+        <a href="#"><img src="./img/frontmentor.png" alt="front mentor"></a>
+        <a href="#"><img src="./img/linkedin.png" alt="linkedin"></a>
+        <a href="#"><img src="./img/twitter.png" alt="twitter"></a>
+      </div>
+    </footer>
     
     <script type="module" src="./src/main.js"></script>
   </body>
