mobile design terminado

--- a/code/index.html
+++ b/code/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./src/style.css" />
+
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
+
     <title>Adam Keyes</title>
   </head>
   <body>
@@ -43,7 +48,7 @@
           accessible web apps that users love.
         </p>
 
-        <a href="#contact">CONTACT ME</a>
+        <a href="#contact" class="button">CONTACT ME</a>
       </div>
     </header>
 
@@ -75,94 +80,102 @@
       <section class="projects">
         <div class="header-projects">
           <h1>Projects</h1>
-          <a href="#contact">Contact Me</a>
+          <a href="#contact" class="button">CONTACT ME</a>
         </div>
 
-        <div class="project1">
-          <div class="img1">
+        <div class="project">
+          <div class="img">
             <img src="./img/image1.png" alt="Project 1">
           </div>
 
           <h1>DESIGN PORTFOLIO</h1>
-          <H2 class="space">HTML    CSS</H2>
+          <H2 class="space">HTML     CSS</H2>
           <p>
-            <a href="#">VIEW PROJECT</a>
-            <a href="#">VIEW CODE</a>
+            <a href="#" class="button">VIEW PROJECT</a>
+            <a href="#" class="button">VIEW CODE</a>
           </p>
         </div>
 
-        <div class="project2">
-          <div class="img2">
+        <div class="project">
+          <div class="img">
             <img src="./img/image2.png" alt="Project 2">
           </div>
 
           <h1>E-LEARNING LANDING PAGE</h1>
-          <H2 class="space">HTML    CSS</H2>
+          <H2 class="space">HTML     CSS</H2>
           <p>
-            <a href="#">VIEW PROJECT</a>
-            <a href="#">VIEW CODE</a>
+            <a href="#" class="button">VIEW PROJECT</a>
+            <a href="#" class="button">VIEW CODE</a>
           </p>
         </div>
 
-        <div class="project3">
-          <div class="img3">
+        <div class="project">
+          <div class="img">
             <img src="./img/image3.png" alt="Project 3">
           </div>
 
           <h1>TODO WEB APP</h1>
-          <H2 class="space">HTML    CSS    JAVASCRIPT</H2>
+          <H2 class="space">HTML     CSS     JAVASCRIPT</H2>
           <p>
-            <a href="#">VIEW PROJECT</a>
-            <a href="#">VIEW CODE</a>
+            <a href="#" class="button">VIEW PROJECT</a>
+            <a href="#" class="button">VIEW CODE</a>
           </p>
         </div>
 
-        <div class="project4">
-          <div class="img4">
+        <div class="project">
+          <div class="img">
             <img src="./img/image4.png" alt="Project 4">
           </div>
 
           <h1>ENTERNAIMENT WEB APP</h1>
-          <H2 class="space">HTML    CSS    JAVASCRIPT</H2>
+          <H2 class="space">HTML     CSS     JAVASCRIPT</H2>
           <p>
-            <a href="#">VIEW PROJECT</a>
-            <a href="#">VIEW CODE</a>
+            <a href="#" class="button">VIEW PROJECT</a>
+            <a href="#" class="button">VIEW CODE</a>
           </p>
         </div>
 
-        <div class="project5">
-          <div class="img5">
+        <div class="project">
+          <div class="img">
             <img src="./img/image5.png" alt="Project 5">
           </div>
 
           <h1>MEMORY GAME</h1>
-          <H2 class="space">HTML    CSS    JAVASCRIPT</H2>
+          <H2 class="space">HTML     CSS     JAVASCRIPT</H2>
           <p>
-            <a href="#">VIEW PROJECT</a>
-            <a href="#">VIEW CODE</a>
+            <a href="#" class="button">VIEW PROJECT</a>
+            <a href="#" class="button">VIEW CODE</a>
           </p>
         </div>
 
-        <div class="project6">
-          <div class="img6">
+        <div class="project">
+          <div class="img">
             <img src="./img/image6.png" alt="Project 6">
           </div>
 
           <h1>ART GALLERY SHOWCASE</h1>
-          <H2 class="space">HTML    CSS    JAVASCRIPT</H2>
+          <H2 class="space">HTML     CSS     JAVASCRIPT</H2>
           <p>
-            <a href="#">VIEW PROJECT</a>
-            <a href="#">VIEW CODE</a>
+            <a href="#" class="button">VIEW PROJECT</a>
+            <a href="#" class="button">VIEW CODE</a>
           </p>
         </div>
       </section>
+    </main>
 
+    <footer>
       <section id="contact">
-        <h1>Contact</h1>
-        <p>
-          I would love to hear about your project and how I could help.
-          Please fill in the form, and I’ll get back to you as soon as possible.
-        </p>
+        <div class="ovalos2">
+          <img src="./img/ovalos.png" alt="decoration">
+        </div>
+        <div class="contact-text">
+          <h1>Contact</h1>
+          <p>
+            I would love to hear about your project and how I could help.
+            Please fill in the form, and I’ll get back to you as soon as possible.
+          </p>
+        </div>
+        
         <div class="cuestionario">
           <form action="#" method="post" class="contact-form">
             <div class="input">
@@ -171,22 +184,26 @@
 
             <div class="input">
               <input type="email" placeholder="EMAIL" id="email" required>
+              <div class="error">Sorry, invalid format here</div>
             </div>
 
             <div class="input">
               <textarea name="user_message" id="message" cols="60" rows="5" placeholder="MESSAGE"></textarea>
             </div>
 
-            <button type="submit" class="send-button">
-              SEND MESSAGE
-            </button>
+            <div class="submit-button">
+              <button type="submit" class="button">
+                SEND MESSAGE
+              </button>
+            </div>
           </form>
         </div>
       </section>
-      <hr>
-    </main>
 
-    <footer>
+    <div class="hr">
+      <hr>
+    </div>
+
       <h1>adamkeyes</h1>
       <div class="icons">
         <a href="#"><img src="./img/github.png" alt="github"></a>
